--- a/TmShuttle/FrmMain.resx
+++ b/TmShuttle/FrmMain.resx
@@ -123,4 +123,81 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>50</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD/////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////+/v7/783Q/+m7
+        v//y2Nv//v7+//7+/v/swsb/5a2y//35+f/+/v7/9Nze/+Gip//w0NP//v7+//LY2//ouLz/783Q//78
+        /P/+/v7/7cjL/+avtP/79PX//v7+//vz9P/jpqv/68HF//7+/v/+/v7///////////////////////78
+        /P+qCyP/rhUs/6cDHP/jsrr/znaF/60RKP+vGC7/wlNl/+zM0f+oBR3/tSk9/6sOJv/x2d3/ujlM/6wQ
+        J/+nAxz/1YqW/9mWof+oBh7/sBow/7MmPP/04+b/syg+/7MiN/+nBBz/3qSu//7+/v//////////////
+        /////////vz9/5sMOP/Ul6r/nxZB/8VyjP+gGkP/y4GY/9qnt/+aDDj/zYed/5YALv/pytT/mgo3/9SX
+        qv+tOV3/wWmF/7dRcP+7WXj/t1Fx/7VLbP/qzNX/lgAu/9KTp/+WAC//2qa2/6MfSP+8XHr//v7/////
+        ///////////////////9/P3/iAxR/6xaiv+DA0v/xomq/5w0bf+lSn//sWOR/48aWv/FiKr/ggBJ/+XL
+        2v+GCE//yI+v/504cf+cNnH/kyVk/7lwmP+uW4n/jxxd/7Zumf+EBEv/2rPI/4IASf/OnLj/lCVj/6pR
+        g////v7///////////////////////79/v+mYp7/izOC/7V6rP/48vb/38Xa/5A8h/+OOYb/2r3V/+DI
+        3f+SQIr/8OXv/5ZGjf/bwNj/sXaq/5A8h/+nYp7/8ujw/+7g6/+fVJX/giV6/8mfw//z6vL/lEKL/+HJ
+        3f+oZqD/wZG7//7+/v////////////////////////////7+/v/+/v7//v7+//7+/v/+/v7//v7+//7+
+        /v/+/v7//v7+//7+/v/+/v7//v7+//7+/v/+/v7//v7+///+//////////7+//7+/v/8+/3/39Lr/8Sr
+        2v/8+/3//v7+//7+/v/+/v7//v7+/////////////////////////////v7+/7CZ3P9aKLT/YjO4/25D
+        vv96U8X/hmTL/5R20f+hh9j/rZbd/72r5P/KvOr/5uD1//7+/v/+/v7//v7+//z8/v/Wy+7/lHbR/1gl
+        s/89AKT/Qwim/93S7v/////////////////////////////////////////////////+/v7/tqfn/3hd
+        1P8yC8P/SifI/1o5zP9XNcv/UC7K/0Qfx/8tBsH/KADA/ygAwP9JJ8r//Pz+/9LM9P+LeOH/RSTL/ygA
+        wP8yC8P/Qh7G/00ry//t6fj//v7+////////////////////////////////////////////////////
+        ///+/v7/9PP9/zEe3f/x7/z///7////+/v/+/v7//v7+/5qR7v9eT+X/urT0/2lc6P81I+D/FgDZ/zYi
+        3f+Bc+f/w7vy//b1/f/z8vz/RjTg/9TQ+P//////////////////////////////////////////////
+        ///////////////////Lyvv/WFLz/5aU+f9lYfb/WFP1/3Rx9//Lyvz/vLr5/zs18f8zLPD/IBju/zYv
+        7/9dWPP//Pz+//7+/v/c3P3/oJ36/4qI+P9oZPX/Xlj0//7+/v/+/v7/////////////////////////
+        /////////////////////////v7+/5GR/f8BAPr/AQD6/wEA+v8BAPr/AQD6/wQD+v9tbPz/MC/7/+rq
+        /f/4+f7/mpn8/1BP+//y8/7/W1v8/wQD+v8BAPr/AQD6/wEA+v8EBPr/fX39//39/v/+/v7/////////
+        ///////////////////////////////////d3f7/DAz+/wAA/v8AAP7/AAD+/wAA/v8AAP7/AAD+/wAA
+        /v80NP7//v7+///////IyP7/ODj+/1hY/v8AAP7/AAD+/wAA/v8AAP7/AAD+/wAA/v8BAP7/l5f+//7+
+        /v///////////////////////////////////////v7+/3p5+/8IBfj/CAX4/wgF+P8IBfj/CAX4/wgF
+        +P8IBfj/CAX4/xAN+f/i4v3///////j4/v8dG/n/CAb4/wgF+P8IBfj/CAX4/wgF+P8IBfj/CAX4/wgF
+        +P8eHPn/9fX+//7+/v/////////////////////////////////+/v7/S0Pv/xcN6/8YDev/GA3r/xgN
+        6/8YDev/GA3r/xgN6/8YDev/GA3q/5mU9f/+/v7//v7+/01E7/8YDev/GA3r/xgN6/8YDev/GA3r/xgN
+        6/8YDev/GA3r/xgN6/+zr/f//v7+//////////////////////////////////7+/v9HMtr/LRbV/y0W
+        1f8tFtX/LRbV/y0W1f9AK9r/MhvX/y0W1f8tFtX/h3rn//7+/v/9/P7/PynZ/y0W1f8tFtX/LRbV/y0W
+        1f8tFtX/LRbV/y0W1f8tFtX/LRbV/4R15v/+/v7//////////////////////////////////v7+/1s3
+        w/9IH7v/SB+7/0gfu/9IH7v/SyO8/+Xg9v+0peT/SB+7/0ggu/+ijt3//v7+//39/v9ZNML/SB+7/0gf
+        u/93W9D/h2/W/0ggu/9IH7v/SB+7/0gfvP9IILv/mYPa//7+/v//////////////////////////////
+        ///+/v7/nHjC/2Uqnf9mKp3/Ziqd/2Yqnf9mK53/0r/f/6WAw/9mKp3/Ziud/9rM6f///////////5Rs
+        vP9mKp3/ZSqd/8y33f/w6vX/Zyye/2Yqnf9lKp3/Zyye/3VBqf/XyOf///7/////////////////////
+        ///////////////////w6fL/l1WT/6VupP+ENn3/hDV9/4Q1ff+FN37/hTZ+/4Q1ff+iaaD//v3+////
+        ////////3szf/4U3fv+ENX3/kkqJ/7iGrf+ENX3/hDV9/4Q1ff+1h7P/rnur//79/v//////////////
+        //////////////////////////////7+/v/p1t//vXWK/65Wb/+jQF7/o0Be/6NAXv+jQF7/rll1//Tq
+        7//+/v7////////////+/v7/zZuu/6NAXv+jQF7/pEBe/6NAXv+jQF7/o0Be/7Jfef/y5uv//v7+////
+        //////////////////////////////////////////////7+/v/58PD/26Gg/8prZv/CUEf/xFhQ/9aQ
+        jv/47/D//v7+//////////////////7+/v/+/v7/5Lm5/8VbU//ASkD/wEpA/8FNRP/VjYv/+O7u//7+
+        /v////////////////////////////////////////////7+/v/vqY7/6Ipn/+qRb//rlHP/7Jl5/+uY
+        ef/uoob/76qO//CulP/ytJz/87mj//S/qf/0wa3/9ci2//bNvP/308X/9tDB/+6ynv/trpr/9dPH//vr
+        5f/88u3//fbz//359//+/v7//////////////////////////////////v7+//Sfdv/xeDz/8Gon//Bh
+        Gv/vXRT/71sR/+9bEP/vWg//71oP/+9aD//vWg7/71oO/+9aD//vWg7/71oP/+9aD//vWg//71oO/+9a
+        D//vWg//8FoP//BcEf/wXRP/8GEY//3u5v////////////////////////////////////////////7+
+        /v/+/v7//vz6//738//+8er//uzh//7l2P/94M7//tvH//3Yw//907v//dC2//3Lrv/9x6j//cWk//3A
+        m//9vJb//bmS//23j//9tYv//bKH//2xhP/9wZ///vr4//7+/v//////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
